--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -37,7 +37,7 @@
       },
        {
          "name": "unit",
-         "files": ["tests/unit/**/*.spec(.ts|.js)"],
+         "files": ["tests/**/*.spec(.ts|.js)"],
          "timeout": 60000
        }
     ]
