--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.6",
     "@faker-js/faker": "^8.3.1",
+    "@japa/expect": "^2.0.2",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
     "@types/proxy-addr": "^2.0.3",
