--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "test:cov": "nyc --reporter=html node ace test",
+    "cov:report": "start coverage/index.html"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.6",
